changing the window size changes the number of rows in the table

--- a/src/components/Paginator/Paginator.module.scss
+++ b/src/components/Paginator/Paginator.module.scss
@@ -27,8 +27,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        color: #fff;
         background-color: #3243ff;
-        height: 30px;
+        height: 28px;
         width: 30px;
         cursor: pointer;
       }
